@@ -4,24 +4,25 @@ import lombok.Value;
 
 import java.time.Instant;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
  * Immutable snapshot of one CA generation step.
  * Collected into List<SimulationStepResult> by CaSpreadEngine and handed to output assembly.
- *
+ * <p>
  * generation values are zero-based and sequential — list index == generation number.
  * newlyIgnitedCells is unmodifiable.
  */
 @Value
 public class SimulationStepResult {
-    Set<Long> newlyIgnitedCells;
-    int       generation;
-    Instant   timestamp;
+	Set<Long> newlyIgnitedCells;
+	int generation;
+	Instant timestamp;
 
-    public SimulationStepResult(Set<Long> newlyIgnitedCells, int generation, Instant timestamp) {
-        this.newlyIgnitedCells = Collections.unmodifiableSet(newlyIgnitedCells);
-        this.generation        = generation;
-        this.timestamp         = timestamp;
-    }
+	public SimulationStepResult(Set<Long> newlyIgnitedCells, int generation, Instant timestamp) {
+		this.newlyIgnitedCells = Set.copyOf(newlyIgnitedCells);
+		this.generation = generation;
+		this.timestamp = timestamp;
+	}
 }
